# LOCal

./: .gitignore
analysis/: raw_data_ana.ipynb
detector_simulation/: CMakeLists.txt  README.md  local.cc  tute.cc
detector_simulation/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstructionAlt.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
detector_simulation/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionAlt.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  test.ipynb
paper/: jheppub.sty  local.aux  local.bib  local.blg  local.fdb_latexmk  local.fls  local.out  local.tex  local.toc
